--- a/style.css
+++ b/style.css
@@ -408,5 +408,5 @@ footer {
     color: #6b6651;
     font-size: 0.9em;
     border-top: 1px solid #32281E;
-    font-family: BeaufortforLOL-Regular, sans-serif;
+    font-family: BeaufortforLOL, sans-serif;
 }
