--- a/style.css
+++ b/style.css
@@ -409,4 +409,5 @@ footer {
     font-size: 0.9em;
     border-top: 1px solid #32281E;
     font-family: BeaufortforLOL, sans-serif;
+    font-weight: 400;
 }
