--- a/style.css
+++ b/style.css
@@ -62,6 +62,11 @@ header {
 header h1 {
     font-family: BeaufortforLOL;
     font-weight: 700;
+    background: linear-gradient(to right, #785A28, #C89B3C);
+    background-clip: text;
+    -webkit-background-clip: text;
+    color: transparent;
+    -webkit-text-fill-color: transparent;
 }
 
 nav ul {
@@ -188,10 +193,10 @@ main ul, ol {
 }
 
 .step-image img {
-  width: 50%;
+  max-width: 300px;
   height: auto;
-  border-radius: 8px;
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.4);
+  border: 1px solid #32281E;
 }
 
 .step-image-code {
@@ -201,10 +206,23 @@ main ul, ol {
 }
 
 .step-image-code img {
-  width: 70%;
+  width: 80%;
   height: auto;
-  border-radius: 8px;
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.4);
+  border: 1px solid #32281E;
+}
+
+.step-image-code-2 {
+  margin: 1rem 0;
+  margin-bottom: 1rem;
+  text-align: center;
+}
+
+.step-image-code-2 img {
+  width: 50%;
+  height: auto;
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.4);
+  border: 1px solid #32281E;
 }
 
 .step-image figcaption {
@@ -285,7 +303,7 @@ code {
 .card-content h3 {
     font-size: 1.3em;
     color: #C8AA6E;
-    font-family: BeaufortforLOL-Regular, sans-serif;
+    font-family: BeaufortforLOL, sans-serif;
     letter-spacing: 3px;
     text-align: center;
     transition: 0.2s;
@@ -340,15 +358,16 @@ code {
 }
 
 .item-icon {
-    width: 36px;
-    height: 36px;
+    width: 76px;
+    height: 76px;
     margin-right: 10px;
     border: 1px solid #32281E;
 }
 
 .item-name {
     font-size: 1rem;
-    font-family: BeaufortforLOL-Regular, sans-serif;
+    font-family: BeaufortforLOL, sans-serif;
+    font-weight: 500;
     letter-spacing: 3px;
     color: #C8AA6E;
     transition: 0.2s;
@@ -366,6 +385,14 @@ code {
     margin-top: 10px;
     line-height: 1.4;
     text-align: justify;
+}
+
+.item-details p {
+    margin-bottom: 1rem;
+}
+
+.item-details ul {
+    margin-left: 2rem;
 }
 
 .item-card.active .item-details {
@@ -392,7 +419,7 @@ code {
     cursor: pointer;
     letter-spacing: 3px;
     transition: 0.2s ease;
-    font-family: BeaufortforLOL-Regular, sans-serif;
+    font-family: BeaufortforLOL, sans-serif;
 }
 
 .filter-btn:hover {
