--- a/style.css
+++ b/style.css
@@ -56,7 +56,6 @@ header {
     border-bottom: 1px solid #32281E;
     letter-spacing: 6px;
     top: 0;
-    position: sticky;
 }
 
 header h1 {
@@ -88,7 +87,7 @@ nav ul li a {
     padding: 5px 10px;
     transition: 0.2s;
     font-family: BeaufortforLOL, sans-serif;
-    font-weight: 300;
+    font-weight: 400;
 }
 
 nav ul li a:hover {
@@ -110,6 +109,7 @@ nav ul li ul.dropdown {
     overflow: hidden; /* Prevents overflow while collapsed */
     transition: max-height 0.2s ease-out, opacity 0.2s ease-out, visibility 0s linear 0.2s; /* Smooth transition */
     border: 1px solid #32281E;
+    border-radius: 3px;
 }
 
 nav ul li:hover ul.dropdown {
@@ -335,7 +335,8 @@ code {
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin: 6px;
+    margin: 10px;
+    border-radius: 3px;
 }
 
 .item-info {
@@ -358,16 +359,17 @@ code {
 }
 
 .item-icon {
-    width: 76px;
-    height: 76px;
+    width: 66px;
+    height: 66px;
     margin-right: 10px;
     border: 1px solid #32281E;
+    border-radius: 3px;
 }
 
 .item-name {
     font-size: 1rem;
     font-family: BeaufortforLOL, sans-serif;
-    font-weight: 500;
+    font-weight: 400;
     letter-spacing: 3px;
     color: #C8AA6E;
     transition: 0.2s;
@@ -410,16 +412,19 @@ code {
 }
 
 .filter-btn {
-    background-color: #120F0F;
+    background-color: #181414;
     color: #C8AA6E;
     font-size: 0.9rem;
-    padding: 10px 20px;
-    margin: 0 10px;
+    padding: 5px 5px;
+    margin: 5px 5px;
     border: none;
     cursor: pointer;
     letter-spacing: 3px;
     transition: 0.2s ease;
     font-family: BeaufortforLOL, sans-serif;
+    font-weight: 400;
+    border: 1px solid #32281E;
+    border-radius: 3px;
 }
 
 .filter-btn:hover {
@@ -431,10 +436,11 @@ footer {
     text-align: center;
     padding: 10px;
     margin-top: 20px;
-    background: #120F0F;
+    background: #181414;
     color: #6b6651;
     font-size: 0.9em;
     border-top: 1px solid #32281E;
+    border-bottom: 1px solid #32281E;
     font-family: BeaufortforLOL, sans-serif;
     font-weight: 400;
 }
