--- a/style.css
+++ b/style.css
@@ -253,6 +253,11 @@ main ul, ol {
   flex-shrink: 0;
 }
 
+.divider {
+    background: linear-gradient(90deg, #32281E 0, rgba(0, 0, 0, 0));
+    height: 1px;
+}
+
 .step-image {
   margin: 1rem 0;
   margin-bottom: 1rem;
@@ -422,7 +427,6 @@ code {
 
 .item-toggle {
     display: flex;
-    align-items: center;
     background: none;
     border: none;
     padding: 0;
@@ -430,6 +434,7 @@ code {
     cursor: pointer;
     font-size: 1.2rem;
     margin-top: 5px;
+    text-align: left;
 }
 
 .item-icon {
@@ -440,6 +445,12 @@ code {
     border-radius: 3px;
 }
 
+.item-text {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
 .item-name {
     font-size: 1rem;
     font-family: BeaufortforLOL, sans-serif;
@@ -447,6 +458,15 @@ code {
     letter-spacing: 4px;
     color: #C8AA6E;
     transition: 0.2s;
+}
+
+.item-subname {
+    font-family: BeaufortforLOL;
+    font-weight: 300;
+    font-size: small;
+    letter-spacing: 4px;
+    color: #A09B8C;
+    text-align: left;
 }
 
 .item-name:hover {
