--- a/style.css
+++ b/style.css
@@ -66,7 +66,7 @@ header {
     top: 0;
 }
 
-.site-logo {
+.logo {
   max-width: 200px;   /* scale logo nicely */
   padding-top: 20px;
 }
@@ -715,3 +715,4 @@ footer {
     font-family: BeaufortforLOL, sans-serif;
     font-weight: 400;
 }
+
