--- a/style.css
+++ b/style.css
@@ -66,6 +66,11 @@ header {
     top: 0;
 }
 
+.logo {
+  max-width: 200px;   /* scale logo nicely */
+  padding-top: 20px;
+}
+
 .site-logo {
   max-width: 200px;   /* scale logo nicely */
   padding-top: 20px;
@@ -715,5 +720,6 @@ footer {
     font-family: BeaufortforLOL, sans-serif;
     font-weight: 400;
 }
+
 
 
