--- a/style.css
+++ b/style.css
@@ -66,6 +66,11 @@ header {
     top: 0;
 }
 
+header img {
+  max-width: 200px;
+  padding-top: 20px;
+}
+
 .logo {
   max-width: 200px;   /* scale logo nicely */
   padding-top: 20px;
@@ -720,6 +725,7 @@ footer {
     font-family: BeaufortforLOL, sans-serif;
     font-weight: 400;
 }
+
 
 
 
