--- a/chronicle.css
+++ b/chronicle.css
@@ -281,20 +281,20 @@
 
 
   /* Collapsed drawer effect */
-  .folio-nav:not(.expanded) {
-    background: linear-gradient(to bottom, #0f0d0d, #0d0b0b);
-    box-shadow: inset 0 -2px 4px rgba(0,0,0,0.4);
-  }
+.folio-nav:not(.expanded) {
+  background: linear-gradient(to bottom, #0f0d0d, #0d0b0b);
+  box-shadow: inset 0 -2px 4px rgba(0,0,0,0.4);
+}
 
-  .folio-nav:not(.expanded)::after {
-    content: "";
-    display: block;
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    height: 1px;
-    background: linear-gradient(to right, rgba(0,0,0,0), #32281E, rgba(0,0,0,0));
+.folio-nav:not(.expanded)::after {
+  content: "";
+  display: block;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  height: 1px;
+  background: linear-gradient(to right, rgba(0,0,0,0), #32281E, rgba(0,0,0,0));
   }
 }
 
@@ -303,6 +303,11 @@
   .folio-toggle {
     display: none !important;
   }
+}
+
+.glossary-text p {
+  text-indent: 0;
+  margin-bottom: 0.5rem;
 }
 
 
